# csaw23_nervcenter

./: .gitignore  CMakeLists.txt  Makefile  NOTES.md  auto_sockattack.sh  base64.c  client.py  composite_key.py  image.c  mutate_ssh_pubkey.py  nervcenter.c  nervcenter.h  parsers.c  parsers.h  resources.c  resources.h  rsautil.c  rsautil.h  sockfun.c  sockfun.h  ui.c  ui.h
.github/workflows/: build.yaml
fuzzers/: client_fuzzer.c  dump_pubkey_ssh_fuzzer.cc  encrypt_message_fuzzer.cc  sensor_fuzzer.c  validate_challenge_fuzzer.cc
img/: asuka_pathetic.txt  credits.tar.xz  documentation.txt  nerv_wide.txt  shinji.txt
include/: nervcenter.h  rsautil.h
knowngood/: tamper.txt  tamper_d.txt
solver/: composite_key.py  signmessage.c  solver.py  ssh_pubkey.py
src/: nervcenter.c  ui.c
testkeys/: test_key_1024  test_key_1024.pub  test_key_2048  test_key_2048.pub
tests/: CMakeLists.txt  test_rsa_enc.c  test_rsa_sig.c  test_server_basics.py  test_ui.c
util/: CMakeLists.txt  add_ansi_colors.py  pack_images.c
